<resources>
    <string name="app_name">Alarms</string>
    <string name="alarm_add">Add new alarm</string>
    <string name="alarm_edit">Edit alarm</string>
    <string name="alarm_remove">Remove alarm</string>
    <string name="alarm_activate">Activate alarm</string>
    <string name="alarm_activated">Alarm activated</string>
    <string name="alarm_deactivate">Deactivate alarm</string>
    <string name="alarm_deactivated">Deactivated alarm</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="cero">00</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="dospuntos">:</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="alarm_added">Alarm added</string>
    <string name="alarm_deleted">Alarm deleted</string>
    <string name="alarm_added_error">All times needed</string>
    <string name="error">There has been an error</string>
    <string name="alarm_deleted_error">The alarm could not be deleted</string>
</resources>