<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lLCustomDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvHoras"
                style="@style/dialogTV"
                android:text="@string/h"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvMinutos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tvMinutos"
                style="@style/dialogTV"
                android:text="@string/m"
                app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
                app:layout_constraintEnd_toStartOf="@+id/tvSegundos"
                app:layout_constraintStart_toEndOf="@+id/tvHoras"
                app:layout_constraintTop_toTopOf="@+id/tvHoras" />

            <TextView
                android:id="@+id/tvSegundos"
                style="@style/dialogTV"
                android:text="@string/s"
                app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMinutos"
                app:layout_constraintTop_toTopOf="@+id/tvHoras" />

            <EditText
                android:id="@+id/etHora"
                style="@style/dialogTV.dialogET"
                android:importantForAutofill="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvHoras"
                app:layout_constraintStart_toStartOf="@id/tvHoras"
                app:layout_constraintTop_toBottomOf="@id/tvHoras"
                app:layout_constraintVertical_bias="0.1"
                tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

            <TextView
                android:id="@+id/tvHorasSeparador"
                style="@style/dialogTV"
                android:text="@string/dospuntos"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/etHora"
                app:layout_constraintEnd_toStartOf="@+id/etMinutos"
                app:layout_constraintStart_toEndOf="@+id/etHora"
                app:layout_constraintTop_toTopOf="@id/etHora"
                app:layout_constraintVertical_bias="0.52" />

            <EditText
                android:id="@+id/etMinutos"
                style="@style/dialogTV.dialogET"
                android:importantForAutofill="no"
                android:text="01"
                app:layout_constraintBottom_toBottomOf="@id/etHora"
                app:layout_constraintEnd_toEndOf="@id/tvMinutos"
                app:layout_constraintStart_toStartOf="@id/tvMinutos"
                app:layout_constraintTop_toTopOf="@id/etHora"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvMinutosSeparador"
                style="@style/dialogTV"
                android:text="@string/dospuntos"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/etHora"
                app:layout_constraintEnd_toStartOf="@id/etSegundos"
                app:layout_constraintStart_toEndOf="@id/etMinutos"
                app:layout_constraintTop_toTopOf="@id/etHora"
                app:layout_constraintVertical_bias="0.52" />

            <EditText
                android:id="@+id/etSegundos"
                style="@style/dialogTV.dialogET"
                android:importantForAutofill="no"
                android:text="01"
                app:layout_constraintBottom_toBottomOf="@id/etHora"
                app:layout_constraintEnd_toEndOf="@id/tvSegundos"
                app:layout_constraintStart_toStartOf="@id/tvSegundos"
                app:layout_constraintTop_toTopOf="@id/etHora"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/ibAceptar"
                style="@style/dialogIB"
                android:contentDescription="@string/accept"
                android:src="@drawable/ic_check"
                android:background="@drawable/curvado"
                app:tint="@color/light_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ibCancelar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etHora" />

            <ImageButton
                android:id="@+id/ibCancelar"
                style="@style/dialogIB"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_x"
                android:background="@drawable/curvado"
                app:tint="@color/grey"
                app:layout_constraintBottom_toBottomOf="@id/ibAceptar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ibAceptar"
                app:layout_constraintTop_toTopOf="@id/ibAceptar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>