<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvMinutos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvMinutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvHoras"
            app:layout_constraintTop_toTopOf="@+id/tvHoras"
            app:layout_constraintEnd_toStartOf="@+id/tvSegundos"
            app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
            />

        <TextView
            android:id="@+id/tvSegundos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvMinutos"
            app:layout_constraintTop_toTopOf="@+id/tvHoras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvHoras"
             />

        <EditText
            android:id="@+id/etHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/cero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:soundEffectsEnabled="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvHoras"
            app:layout_constraintTop_toBottomOf="@id/tvHoras"
            app:layout_constraintEnd_toEndOf="@id/tvHoras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvHorasSeparador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dospuntos"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="-3dp"
            app:layout_constraintStart_toEndOf="@+id/etHora"
            app:layout_constraintTop_toTopOf="@id/etHora"
            app:layout_constraintEnd_toStartOf="@+id/etMinutos"
            app:layout_constraintBottom_toBottomOf="@+id/etHora" />

        <EditText
            android:id="@+id/etMinutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/cero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:soundEffectsEnabled="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvMinutos"
            app:layout_constraintTop_toTopOf="@id/etHora"
            app:layout_constraintEnd_toEndOf="@id/tvMinutos"
            app:layout_constraintBottom_toBottomOf="@id/etHora" />

        <TextView
            android:id="@+id/tvMinutosSeparador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dospuntos"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="-3dp"
            app:layout_constraintStart_toEndOf="@id/etMinutos"
            app:layout_constraintTop_toTopOf="@id/etHora"
            app:layout_constraintEnd_toStartOf="@id/tvSegundos"
            app:layout_constraintBottom_toBottomOf="@id/etHora"/>

        <EditText
            android:id="@+id/etSegundos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="2"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/cero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:soundEffectsEnabled="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tvSegundos"
            app:layout_constraintTop_toTopOf="@id/etHora"
            app:layout_constraintEnd_toEndOf="@id/tvSegundos"
            app:layout_constraintBottom_toBottomOf="@id/etHora"/>

        <ImageButton
            android:id="@+id/ibAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etHora"
            app:layout_constraintEnd_toStartOf="@+id/ibCancelar"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x"
            app:layout_constraintStart_toEndOf="@id/ibAceptar"
            app:layout_constraintTop_toTopOf="@id/ibAceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ibAceptar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>